--- a/FrontEnd/CSS/signin.css
+++ b/FrontEnd/CSS/signin.css
@@ -1,23 +1,31 @@
 body {
-  margin: 0;
+  margin: -10px;
   padding: 0;
-  display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   font-family: "Jost", sans-serif;
   background-color: #fad0c4;
   background-image: linear-gradient(315deg, #fad0c4 0%, rgb(241, 167, 241) 74%);
+  overflow: hidden;
 }
+
 .main {
+  /* display: flex; */
   width: 350px;
   height: 500px;
   background: black;
   overflow: hidden;
-  background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
-    no-repeat center/ cover;
+  background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38");
   border-radius: 10px;
   box-shadow: 5px 20px 50px #000;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
 }
 #chk {
   display: none;
